--- a/content/99.si.md
+++ b/content/99.si.md
@@ -30,64 +30,28 @@ Here we compare WBO and MBOs at different levels of theory.
 
 #### Differences in conformation-dependent bond order distributions between WBO and MBO at different levels of QC theory
 
-\begin{figure}
-    \subfloat[]{
-        \centering
-        \includegraphics[width=0.5\linewidth]{Figures/Gefitinib_rotor_bonds_highlighted.pdf}
-        \label{subfig:highlighted-bonds-1}
-    }
-    \subfloat[]{
-        \centering
-        \includegraphics[width=0.5\linewidth]{Figures/am1_rotor_wbo_distributions.pdf}
-        \label{subfig:am1-wbo-distributions}
-    }
-
-    \subfloat[]{
-        \centering
-        \includegraphics[width=0.5\linewidth]{Figures/hf3c_rotor_mayer_distributions.pdf}
-        \label{subfig:hf3c-mbo-distributions}
-    }
-    \subfloat[]{
-        \centering
-        \includegraphics[width=0.5\linewidth]{Figures/hf3c_rotor_wiberg_lowdin_distributions.pdf}
-        \label{subfig:hf3c-wbo-distributions}
-    }
-
-    \subfloat[]{
-        \centering
-        \includegraphics[width=0.5\linewidth]{Figures/b3lyp_rotor_mayer_distributions.pdf}
-        \label{subfig:b3lyp-mbo-distributions}
-    }
-    \subfloat[]{
-        \centering
-        \includegraphics[width=0.5\linewidth]{Figures/b3lyp_rotor_wiberg_lowdin_distributions.pdf}
-        \label{subfig:b3lyp-wbo-distributions}
-    }
-    \caption[Bond order distributions for rotatable bonds over 232 conformers for Mayer and Wiberg at different levels of QM theory]
-    {\bf Bond order distributions for rotatable bonds over 262 conformers for Mayer and Wiberg at different levels of QM theory}
-    \protect\subref{subfig:highlighted-bonds-1} Gefitinb, with atoms numbered highlighted to correspond to numbers and colors on distribution plots;
-    \protect\subref{subfig:am1-wbo-distributions} Distribution of AM1 WBOs for rotatable bonds;
-    \protect\subref{subfig:hf3c-mbo-distributions} Same as \ref{subfig:am1-wbo-distributions} but for MBOs at HF3C;
-    \protect\subref{subfig:hf3c-wbo-distributions} Same as \ref{subfig:am1-wbo-distributions} calculated at HF3C;
-    \protect\subref{subfig:b3lyp-mbo-distributions} Same as \ref{subfig:am1-wbo-distributions} but for MBOs at calculated at B3LYP;
-    \protect\subref{subfig:b3lyp-wbo-distributions} Same as \ref{subfig:am1-wbo-distributions} but calculated at B3LYP;
-    \label{fig:wbo-mbo-comparison}
-\end{figure}
+![**Bond order distributions for rotatable bonds over 232 conformers for Mayer and Wiberg at different levels of QM theory.**
+**[A]** Gefitinb, with atoms numbered highlighted to correspond to numbers and colors on distribution plots.
+**[B]** Distribution of AM1 WBOs for rotatable bonds.
+**[C]** Same as **[B]** but for MBOs at HF3C.
+**[D]** Same as **[B]** calculated at HF3C.
+**[E]** Same as **[B]** but for MBOs at calculated at B3LYP.
+**[F]** Same as **[B]** but calculated at B3LYP.](images/SI-wbo-dist.svg){#fig:wbo-mbo-comparison}
 
 Both the WBO and MBO are functions of electron density which is conformation dependent, so they will change with conformation.
-As we have shown in \cite{Stern2020}, conjugated bonds have higher variance than non-conjugated bonds.
+As we have shown in @fig:wbo_var_corr, conjugated bonds have higher variance than non-conjugated bonds.
 Different QC methods and ways of calculating bond orders result in differences in bond order values and conformation-dependent variance.
-In \FIG{wbo-mbo-comparison} we compare AM1 \cite{Dewar1985} WBOs, HF-3c \cite{Sure2013} MBOs and WBOs, and B3LYP(BJ)/DZVP \cite{Grimme2010, Godout1992, Becke1993,Grimme2011} MBOs and WBOs.
-\SUBFIG{highlighted-bonds-1} shows Gefitinib, a kinase inhibitors, with its rotatable bonds highlighted to correspond to the colors of the distributions shown in the other panels of \FIG{wbo-mbo-comparison}.
-The bond order distributions shown in \FIG{wbo-mbo-comparison} were calculated over 232 Omega \cite{Hawkins2010} generated conformers of Gefitinib which were then geometry optimized with the methods used to calculate bond orders.
+In Figure @fig:wbo-mbo-comparison we compare AM1 [@doi:10.1021/ja00299a024] WBOs, HF-3c [@doi:10.1002/jcc.23317] MBOs and WBOs, and B3LYP(BJ)/DZVP  [@doi:10.1063/1.3382344; @doi:10.1139/v92-079; @doi:10.1063/1.464913; @doi:10.1002/jcc.21759] MBOs and WBOs.
+Figure @fig:wbo-mbo-comparison **A** shows Gefitinib, a kinase inhibitors, with its rotatable bonds highlighted to correspond to the colors of the distributions shown in the other panels of Figure @fig:wbo-mbo-comparison.
+The bond order distributions shown in Figure @fig:wbo-mbo-comparison were calculated over 232 Omega [@doi:10.1021/ci100031x] generated conformers of Gefitinib which were then geometry optimized with the methods used to calculate bond orders.
 
 For AM1 we only calculated WBOs because the MBO and WBO are equivalent at that level of theory.
 AM1 WBO distributions have lower variance than B3lyp for the non-conjugated bonds, but have significantly higher variance and more modes for the more conjugated bonds.
 
-WBO and MBO distributions calculated from HF-3c optimized structures (\SUBFIG{hf3c-mbo-distributions} and \SUBFIG{hf3c-wbo-distributions}) had lowest variances than other QC methods.
+WBO and MBO distributions calculated from HF-3c optimized structures (Figure @fig:wbo-mbo-comparison **C** and **D**) had lowest variances than other QC methods.
 In addition, both MBO and WBOs have similar values and shapes of their distributions.
 This might be a result of HF-3c using a small, Gaussian atomic orbital (AO) basis set.
-As discussed in \ref{mbo-wbo}, the MBO reduces to the WBO when orthonormalized basis AO are used. In HF-3c, a small, Gaussian basis set is used which might be the reason why the MBOs and WBOs are so similar.
+As discussed in the previous section, the MBO reduces to the WBO when orthonormalized basis AO are used. In HF-3c, a small, Gaussian basis set is used which might be the reason why the MBOs and WBOs are so similar.
 
 When using larger basis sets (B3LYP(BJ)/DZVP), the Mayer and Wiberg bond orders differ significantly.
 First, MBOs have significantly higher variance with respect to conformation.
