--- a/content/99.si.md
+++ b/content/99.si.md
@@ -60,57 +60,19 @@ The basis sets are Löwdin normalized, but the values still seem to grow with la
 
 #### Differences in conformation-dependent bond order correlation structures between WBO and MBO at different levels of QC theory
 
-\begin{figure}
-    \subfloat[]{
-        \centering
-        \includegraphics[width=0.5\linewidth]{Figures/Gefitinib_rotor_bonds_highlighted.pdf}
-        \label{subfig:highlighted-bonds-2}
-    }
-    \subfloat[]{
-        \centering
-        \includegraphics[width=0.5\linewidth]{Figures/am1_wbo_correlations.pdf}
-        \label{subfig:am1-wbo-correlations}
-    }
+![**Bond order correlations with respect to conformations for Mayer and Wiberg at different levels of QM theory.**
+**[A]** Gefitinb, with atoms numbered highlighted to correspond to numbers and colors on distribution plots.
+**[B]** Pearson correlation coefficient of AM1 WBOs for every bond against every bond over 232 conformations.
+**[C]** Same as **[B]** but for MBOs at HF3C.
+**[D]** Same as **[B]** calculated at HF3C.
+**[E]** Same as **[B]** but for MBOs at calculated at B3LYP.
+**[F]** Same as **[B]** but calculated at B3LYP.](images/SI-wbo-correlations.svg){#fig:correlations}
 
-    \subfloat[]{
-        \centering
-        \includegraphics[width=0.5\linewidth]{Figures/hf3c_mayer_correlations.pdf}
-        \label{subfig:hf3c-mbo-correlations}
-    }
-    \subfloat[]{
-        \centering
-        \includegraphics[width=0.5\linewidth]{Figures/hf3c_wiberg_lowdin_correlations.pdf}
-        \label{subfig:hf3c-wbo-correlations}
-    }
+As we have shown in Figure @fig:wbo_var_corr, conjugated systems have strongly correlated and anti-correlated bond orders with respect to conformations.
+Figure @fig:correlations compares such correlation maps and their resulting structures for the bond orders calculated in Figure @fig:wbo-mbo-comparison.
 
-    \subfloat[]{
-        \centering
-        \includegraphics[width=0.5\linewidth]{Figures/b3lyp_mayer_correlations.pdf}
-        \label{subfig:b3lyp-mbo-correlations}
-    }
-    \subfloat[]{
-        \centering
-        \includegraphics[width=0.5\linewidth]{Figures/b3lyp_wiberg_lowdin_correlations.pdf}
-        \label{subfig:b3lyp-wbo-correlations}
-    }
-    \caption[Bond order correlations with respect to conformations for Mayer and Wiberg at different levels of QM theory]
-    {\bf Bond order correlations with respect to conformations for Mayer and Wiberg at different levels of QM theory}
-    \protect\subref{subfig:highlighted-bonds-2} Gefitinb, with atoms numbered to correspond to the numbers on the correlation plots;
-    \protect\subref{subfig:am1-wbo-correlations} Pearson correlation coefficient of AM1 WBOs for every bond against every bond over 232 conformations;
-    \protect\subref{subfig:hf3c-mbo-correlations} Same as \ref{subfig:am1-wbo-correlations} but for MBOs at HF3C;
-    \protect\subref{subfig:hf3c-wbo-correlations} Same as \ref{subfig:am1-wbo-correlations} calculated at HF3C;
-    \protect\subref{subfig:b3lyp-mbo-correlations} Same as \ref{subfig:am1-wbo-correlations} but for MBOs at calculated at B3LYP;
-    \protect\subref{subfig:b3lyp-wbo-correlations} Same as \ref{subfig:am1-wbo-correlations} but calculated at B3LYP;
-
-    \label{fig:correlations}
-\end{figure}
-
-
-As we have shown in \cite{Stern2020}, conjugated systems have strongly correlated and anti-correlated bond orders with respect to conformations.
-\FIG{correlations} compares such correlation maps and their resulting structures for the bond orders calculated in \FIG{wbo-mbo-comparison}.
-
-Correlation plots from HF-3c MBOs and WBOs (\SUBFIG{hf3c-mbo-correlations} and \SUBFIG{hf3c-wbo-correlations} have structures that are very similar to each other.
-This result is similar to \SUBFIG{hf3c-mbo-distributions} and \SUBFIG{hf3c-wbo-distributions} where the distributions were also very similar.
+Correlation plots from HF-3c MBOs and WBOs (Figures @fig:correlations **C** and **D**) have structures that are very similar to each other.
+This result is similar to Figures @fig:wbo-mbo-comparison **C** and **D** where the distributions were also very similar.
 However, the correlation structures of MBOs and WBOs calculated at B3LYP(BJ)/DZVP are different from each other.
 MBOs show stronger correlations and anti-correlations for local conjugated systems.
 For example, the bonds in the phenyl ring (alternating correlated and anti-correlated square formed by bonds 24-29) are all alternatively strongly correlated and anti-correlated.
