fixed figure caption

--- a/content/03.results-and-discussion.md
+++ b/content/03.results-and-discussion.md
@@ -263,7 +263,7 @@ The WBO scan profiles do not change because the changes in the QC torsion scan c
 **[J]** Same as **B** but for amino in different chemical environments. While the gold scan is symmetric around 0^$\circ$^, the red
 and blue scan are not. The Blue scan is shifted and the red scan has a higher barrier on one side.
 **[K]** Same as **C** but for amino. Here the WBO scans are anticorrelated with the QC torsion scans even if the QC scans have different profiles.
-**[L]** Same as **D** but for amino. Here the WBO scans are atnicorrelted with the QC torsion scans.(images/example-scans.svg){#fig:sub_phenyl_qc_scan}
+**[L]** Same as **D** but for amino. Here the WBO scans are atnicorrelted with the QC torsion scans.](images/example-scans.svg){#fig:sub_phenyl_qc_scan}
 
 Figure @fig:sub_phenyl_qc_scan shows three series of QC torsion scans for the same torsion type in different chemical environments to illustrate this.
 Figure @fig:sub_phenyl_qc_scan A, E and I show three torsion types (nitro, urea and amino) in different chemical environments with their associated AM1 ELF10 WBO.
