--- a/content/99.si.md
+++ b/content/99.si.md
@@ -82,3 +82,42 @@ However, there is also a diffusion of the coupling to bonds outside of the pheny
 From these results it is not clear which bond order is better at capturing electronic coupling in larger conjugated systems.
 Further investigation is needed, specifically for deciding if MBO or WBO would be better at differentiating steric and resonance contributions to QC torsion scans discussed in \ref{steric-conjugation}.
 It is encouraging to see that both AM1 and B3LYP(BJ)/DZVP WBOs generate such similar correlation structures.
+
+### Supplementary Figures
+
+![**Variance and correlations of WBO distributions with respect to conformations for a set of kinase inhibitors**
+This figure shows WBO distributions and correlations for a set of kinase inhibitors calculated at B3LYP-D3(BJ) / DZVP.
+Optimized conformations and their WBOs are on QCArchive (`OptimizationDataset`, named `Kinase Inhibitors: WBO Distributions`)](images/SI-KI-all.svg){#fig:kinase_inhibitors}
+
+![**Variance and correlations of AM1 Wiberg bond order distributions with respect to conformations are higher for conjugated bonds**
+The trend seen in @fig:wbo_var_corr for higher level of QC theory (B3LYP-D3(BJ) / DZVP) is also observed at AM1.
+**[A]** Gifitnib with its rotatable bonds highlighted. **[B]** WBO distributions over 232 conformations of the highlighted bonds. The variance
+and their 95% CI is shown. **[C]** Pearson correlation coefficients for WBOs in every bond against all other bonds with respect to conformations.](images/SI-WBO-dist.svg){#fig:si_wbo_dist}
+
+![**Druglike molecules used to calculate ELF10 AM1 WBOs**
+This set of molecules were selected to cover bonds of different types and multiplicities](images/druglike_mols_for_wbo_dist_4.svg){#fig:wbo_dist_mols}
+
+![**Hammett parameters are anti-correlated with ELF10 WBOs**
+**[A]** Hammett sigma meta parameters vs AM1 ELF10 WBOs of X~1~ meta to carboxylic acid.
+ **[B]** Same as **A** but for para substituents](images/SI-hammett.svg){#fig:hammett}
+
+![**QC torsion scans and corresponding WBOs for substituted phenyl set**
+QC torsion scans, WBOs corresponding to scan and torsion barrier heights vs ELF10 WBOs for phenyl set. QC scan colors correspond to highlighted central
+bonds shown on the right. The molecules are labeled with their ELF10 WBOs.](images/SI_substituted_phenyl_td_1.svg){#fig:phenyl_td_1}
+
+![**QC torsion scans and corresponding WBOs for substituted phenyl set**
+QC torsion scans, WBOs corresponding to scan and torsion barrier heights vs ELF10 WBOs for phenyl set. QC scan colors correspond to highlighted central
+bonds shown on the right. The molecules are labeled with their ELF10 WBOs.](images/SI_substituted_phenyl_td_2.svg){#fig:phenyl_td_2}
+
+![**QC torsion scans and corresponding WBOs for substituted phenyl set**
+QC torsion scans, WBOs corresponding to scan and torsion barrier heights vs ELF10 WBOs for phenyl set. QC scan colors correspond to highlighted central
+bonds shown on the right. The molecules are labeled with their ELF10 WBOs.](images/SI_substituted_phenyl_td_3.svg){#fig:phenyl_td_3}
+
+![**QC torsion scans and corresponding WBOs for substituted phenyl set**
+QC torsion scans, WBOs corresponding to scan and torsion barrier heights vs ELF10 WBOs for phenyl set. QC scan colors correspond to highlighted central
+bonds shown on the right. The molecules are labeled with their ELF10 WBOs.](images/SI_substituted_phenyl_td_4.svg){#fig:phenyl_td_4}
+
+![**QC torsion scans and corresponding WBOs for substituted phenyl set**
+QC torsion scans, WBOs corresponding to scan and torsion barrier heights vs ELF10 WBOs for phenyl set. QC scan colors correspond to highlighted central
+bonds shown on the right. The molecules are labeled with their ELF10 WBOs.](images/SI_substituted_phenyl_td_5.svg){#fig:phenyl_td_5}
+
