--- a/content/99.si.md
+++ b/content/99.si.md
@@ -92,7 +92,7 @@ Optimized conformations and their WBOs are on QCArchive (`OptimizationDataset`, 
 ![**Variance and correlations of AM1 Wiberg bond order distributions with respect to conformations are higher for conjugated bonds**
 The trend seen in @fig:wbo_var_corr for higher level of QC theory (B3LYP-D3(BJ) / DZVP) is also observed at AM1.
 **[A]** Gifitnib with its rotatable bonds highlighted. **[B]** WBO distributions over 232 conformations of the highlighted bonds. The variance
-and their 95% CI is shown. **[C]** Pearson correlation coefficients for WBOs in every bond against all other bonds with respect to conformations.](images/SI-WBO-dist.svg){#fig:si_wbo_dist}
+and their 95% CI is shown. **[C]** Pearson correlation coefficients for WBOs in every bond against all other bonds with respect to conformations.](images/SI-gefitinib-wbo-dist.svg){#fig:si_wbo_dist}
 
 ![**Druglike molecules used to calculate ELF10 AM1 WBOs**
 This set of molecules were selected to cover bonds of different types and multiplicities](images/druglike_mols_for_wbo_dist_4.svg){#fig:wbo_dist_mols}
