pass through introductio

--- a/content/02.introduction.md
+++ b/content/02.introduction.md
@@ -1,8 +1,8 @@
 ## 1. Introduction
 
 Molecular mechanics (MM) methods rely on Newtonian physics inspired empirical force field to describe the potential energy of the system and are widely used to study larger systems with $10^3$ - $10^6$ atoms [@doi:10.1016/j.neuron.2018.08.011].
-They are sufficiently cheap and accurate to study biological relevant systems and provide atomistic details of mechanisms in enzymes in solution and can reliably predict thermodynamic properties such as binding free energies [@doi:10.7554/eLife.45403; @doi:10.1021/ja508394x; CITE free energy].
-However, given the larger chemical space small small molecule force fields need to cover to adequately represent druglike molecules and common metabolites, they have lagged behind protein force fields [@doi:10.1021/acs.jctc.8b00821; @doi:10.1021/acs.jctc.5b00864].
+They are sufficiently cheap and accurate to study biological relevant systems and provide atomistic details of mechanisms in enzymes in solution and can reliably predict thermodynamic properties such as binding free energies [@doi:10.7554/eLife.45403; @doi:10.1021/ja508394x; @doi:10.1021/ja512751q].
+However, given the larger chemical space small molecule force fields need to cover to adequately represent druglike molecules and common metabolites, they have lagged behind protein force fields [@doi:10.1021/acs.jctc.8b00821; @doi:10.1021/acs.jctc.5b00864].
 In MM forcefields, the potential energy is constructed with terms for bond stretching, angle bending, internal rotations, electrostatics and Lennard-Jones for attractive and repulsive forces [@doi:10.1002/jcc.540040211; @doi:10.1021/ja00124a002;@doi:10.1021/ja9621760 ].
 These free parameters in these functionals are fit to reproduce experimental and quantum chemical (QC) data.
 
@@ -13,37 +13,38 @@ In most force fields (CHARMM [@doi:10.1002/jcc.540040211], AMBER [@doi:10.1021/j
 $$ E_{torions} = \sum_{torsions}\sum_{n=1}^N K_{\phi, n}(1 + cos(n\phi_i - \delta_n)) $${#eq:torsion}
 
 where the sum is over torsion angles $\phi$ and multiplicities $n$.
-The force constants $K_{\phi, n} determine the barrier heights, the multiplicities $n$ determine the number of minima and the phase angles $\delta_{\phi, n} determines the phase.
+The force constants $K_{\phi, n}$ determine the barrier heights, the multiplicities $n$ determine the number of minima, and the phase angles $\delta_{\phi, n}$ determines the phase.
 In most force fields the $N$ can go up to 6 and the phase angles $\delta$ are usually set to $0^{\circ}$ or $180^{\circ}$ to symmetrize the curve around $0^{\circ}$ [@doi:10.1007/s00894-008-0305-0].
 
 The torsion energy about a bond is determined by a combination of local and non-local effects from conjugation, hypercojugation, sterics, and electrostatics [@doi:10.1021/acs.jcim.9b00585; @doi:10.1021/acs.jcim.7b00645; @doi:10.1038/35079036; @doi:10.1021/jp046290d].
 Steric and elecrostatic interactions are, in principle, accounted for by non bonded terms in most force fields, so a torsion profile would ideally primarily capture conjugation or hyperconjugation effects, and only the 1-4 electrostatics.
 
 The torsion functional which models internal rotation is particularly challenging to parameterize and the least transferable relative to other bonded terms for several reasons [@doi:10.1186/s13321-019-0371-6;  doi:10.1021/ct500573f; @doi:10.1021/ct4003477; @doi:10.1021/acs.jcim.9b00585].
-First, torsion parameters are usually fit to computationally expensive QC torsion scans which introduces a bottle neck to setting up simulations.
-Second, torsion parameters are 'soft' or very flexible degrees of freedom compared to bond and angle parameters.
+First, torsion parameters are usually fit to computationally expensive QC torsion scans which introduces a bottleneck to setting up simulations.
+Second, torsion parameters are 'soft', or very flexible degrees of freedom compared to bond and angle parameters.
 Relatively small variations to the torsional potential surface can strongly influence molecular conformation distributions [@doi:10.1021/ct4003477].
 Given how critical torsion parameters are in determining conformation distributions in simulations, it is prudent for them to be accurately parameterized.
-Third, torsion potentials can be strongly influenced by distal substituents due to changes in conjugation or hypercojugation, an effect very difficult to represent in a force field that uses only local chemistry to define parameters [CITE fragmenter paper].
-When parameterizing a molecular system, the force field assigns atom types, or a description of the atom's atomic number and chemical environment to every atom in the system [@doi:10.1002/jcc.24244; @doi:10.1021/ci300363c].
+Third, torsion potentials can be strongly influenced by distal substituents due to changes in conjugation or hypercojugation, an effect very difficult to represent in a force field that uses only local chemistry to define parameters [@doi:10.1101/2020.08.27.270934]
+
+When parameterizing a molecular system, the force field assigns atom types, or a description of the atom's atomic number and chemical environment to atom in the system [@doi:10.1002/jcc.24244; @doi:10.1021/ci300363c].
 The reason atom types are used is to allow transferability of parameters to other atoms in similar chemical environments.
 A torsion type is defined by the quartet of atom types of the four atoms involved in the torsion [@doi:10.1002/jcc.21367; @doi:10.1002/jcc.20035].
 However, these atom types are generally defined by their local chemical environment which leads to locally defined torsion types.
 Therefore, non-local through-bond effects such as conjugation and hypercojugation are difficult to capture.
-The inability of traditional torsion types to capture such effects and the torsion energy profile's sensitivity distal chemical changes are contributing factors to torsion parameters' poor transferability.
+The inability of traditional torsion types to capture such effects, and the torsion energy profile's sensitivity distal chemical changes are contributing factors to torsion parameters' poor transferability.
 
 To address this issue of poor parameter transferability, many practitioners have employed bespoke parameterization where parameters are fit to a specific molecule.
-Many automatic and semi-automatic tools exist to generate such bespoke paraemters such as GAMMP [cite], ffTK [cite], Paramfit [cite], and QUBEKit [@doi:10.1021/acs.jcim.8b00767].
+Many automatic and semi-automatic tools exist to generate such bespoke parameters such as GAMMP [@doi:10.1021/ct4003477], ffTK [@doi:10.1002/jcc.23422], Paramfit [@doi:10.1002/jcc.23775], and QUBEKit [@doi:10.1021/acs.jcim.8b00767].
 When only a few molecules need to be parameterized, these tools are very useful for aiding researchers in setting up molecular systems in a systematic and reproducible way.
-However, the paraemters generated from such tools are not meant to be generalizable and are not practical when many molecules need to be paraemterized.
+However, the parameters generated from such tools are not meant to be generalizable and are not practical when many molecules need to be parameterized.
 Another approach to overcome this lack of transferability is to add new atom types to adequately capture torsion profiles [@doi:10.1021/ci4001597].
 However, these new atom types are generally added in an unsystematic way and leads to a proliferation of other force field terms [@doi:10.1021/acs.jctc.8b00640].
 
 Atom type independent force fields seek to overcome both the proliferation of force field terms and transferability by moving away from using atom types.
 The SMIRNOFF force field [@doi:10.1021/acs.jctc.8b00640] uses SMARTS patterns for direct chemical perception to replace atom types and avoid table look-ups.
 In the context of torsion types, the SMIRNOFF format allows one to create a new SMARTS pattern for a torsion type without the need to introduce new atom types.
-These SMARTS patterns can be created at different levels of granualarity for torsion types without worrying about proliferation of other force field terms.
-The Hyperconjugation for Torsional Energy Quantification (H-TEQ) [@doi:10.1021/acs.jcim.6b00012; @doi:10.1021/acs.jcim.9b00581; 10.1021/acs.jcim.9b00585] approach uses
+These SMARTS patterns can be created at different levels of granularity for torsion types without worrying about proliferation of other force field terms.
+The Hyperconjugation for Torsional Energy Quantification (H-TEQ) [@doi:10.1021/acs.jcim.6b00012; @doi:10.1021/acs.jcim.9b00581; @doi:10.1021/acs.jcim.9b00585] approach uses
 chemical principles of conjugation, hyperconjugation, and electronegativity of the atoms involved in the torsion to model torsion energies without the need to directly fit torsion parameters.
 In this study we combine these two approaches by using the Wiberg Bond Order (WBO), a measure of electron population overlap between atoms in a bond, and
 SMARTS torsion types to interpolate torsion force field parameters.
@@ -54,9 +55,9 @@ In quantum mechanics, a molecule is a system of individual particles without exp
 Chemists, however, think of molecules as atoms held together by bonds.
 The connectivity graph of molecules is a very important mental model in chemistry, based on centuries of chemical observations and knowledge that chemists employ when thinking about molecules.
 Many quantum chemists such as Pauling [@doi:10.1021/ja01315a105], Coulson [@doi:10.1098/rspa.1939.0006], Mulliken [@doi:10.1063/1.1740588],
-Wiberg [@doi:10/fvwkkh], and Mayer [@doi:10/b5m8r5], Jug [@doi:10.1021/ja00466a009], Politzer [@doi:10.1063/1.1671457] have worked on bridging the gap between the physical and chemical conception of atoms in molecules by an \textit{a posteriori} analysis of the wave function to arrive at a fractional bond order that is consistent with the chemical concept of the multiplicity of a chemical bond.
-Given that these quantities try to make that connection, it is not surprising that fractional bond orders captures important, chemical properties that can be useful in many applications, specifically force field parameterization.
-Indeed, In the MMP2 [@doi:10.1002/jcc.540080504], MM3 [@doi:10.1002/jcc.540110709] and MM4 [@doi:10/ftx79r] force fields, a Variable Electronegativity SCF derived bond order for pi-systems was used to fit bond length, bond force constants and twofold torsional force constants
+Wiberg [@doi:10/fvwkkh], and Mayer [@doi:10/b5m8r5], Jug [@doi:10.1021/ja00466a009], Politzer [@doi:10.1063/1.1671457] have worked on bridging the gap between the physical and chemical conception of atoms in molecules by an $\textit{a posteriori}$ analysis of the wave function to arrive at a fractional bond order that is consistent with the chemical concept of the multiplicity of a chemical bond.
+Given that these quantities try to make that connection, it is not surprising that fractional bond orders captures important chemical properties that can be useful in many applications, specifically force field parameterization.
+Indeed, In the MMP2 [@doi:10.1002/jcc.540080504], MM3 [@doi:10.1002/jcc.540110709] and MM4 [@doi:10/d7b9nj] force fields, a Variable Electronegativity SCF derived bond order for pi-systems was used to fit bond length, bond force constants and twofold torsional force constants
 Here we use the Wiberg Bond Order (WBO), a relatively simple and cheap quantity that comes for free from an AM1BCC calculation used to generate partial charges to interpolate torsion force constants.
 First we show that WBOs are a good indicator of the electron density around the central bond and is linearly related to torsion barrier heights.
 Then we show that it is possible to use this relationship to interpolate torsion force constants for the same torsion type in different chemical environments.
